--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,11 @@ bower_components
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
+build/assets/*.css
+build/assets/*.js
+build/assets/*.jpg
+build/assets/*.png
+build/index.html
 
 # Dependency directories
 node_modules/
